--- a/spread.yaml
+++ b/spread.yaml
@@ -335,77 +335,53 @@ backends:
             ADDRESS $SPREAD_EXTERNAL_ADDRESS
         systems:
             - ubuntu-core-16-64:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-16-64-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-16-32:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-16-32-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-16-arm-64:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-16-arm-64-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-16-arm-32:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-16-arm-32-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-18-64:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-18-64-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-18-32:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-18-32-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-18-arm-64:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-18-arm-64-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-18-arm-32:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-18-arm-32-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-20-64:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-20-64-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-20-32:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-20-32-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-20-arm-64:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-20-arm-64-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
             - ubuntu-core-20-arm-32:
-                  username: external
-                  password: ubuntu
-            - ubuntu-core-20-arm-32-cert:
-                  username: root
-                  cert: true
+                  username: '$(HOST: echo "${SPREAD_SSH_USER:-external}")'
+                  password: '$(HOST: echo "${SPREAD_SSH_PASSWORD:-ubuntu}")'
+                  ssh-rsa-key: '$(HOST: echo "${SPREAD_SSH_RSA_KEY:-}")'
 
 path: /home/gopath/src/github.com/snapcore/snapd
 
