--- a/spread.yaml
+++ b/spread.yaml
@@ -869,6 +869,8 @@ suites:
             # Install the snapd built
             dpkg -i "$SPREAD_PATH"/../snapd_*.deb
         prepare-each: |
+            tests.backup prepare
+
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_prepare_env
@@ -877,6 +879,8 @@ suites:
             . "$TESTSLIB/nested.sh"
             nested_destroy_vm
             nested_cleanup_env
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -918,6 +922,8 @@ suites:
             nested_prepare_env
             nested_create_classic_vm
         prepare-each: |
+            tests.backup prepare
+
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_start_classic_vm
@@ -925,6 +931,8 @@ suites:
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_destroy_vm
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -966,6 +974,8 @@ suites:
             nested_prepare_env
             nested_create_core_vm
         prepare-each: |
+            tests.backup prepare
+
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_start_core_vm
@@ -974,6 +984,8 @@ suites:
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_destroy_vm
+
+            tests.backup restore
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -1018,6 +1030,10 @@ suites:
             nested_create_core_vm
             nested_start_core_vm
             nested_wait_for_snap_command
+        prepare-each: |
+            tests.backup prepare
+        restore-each: |
+            tests.backup restore        
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
