--- a/tests/nested/core20/basic/task.yaml
+++ b/tests/nested/core20/basic/task.yaml
@@ -33,6 +33,9 @@ execute: |
     ! nested_exec "snap list test-snapd-sh"
 
     echo "Ensure 'snap debug show-recovery-key' works as root"
-    nested_exec "sudo snap debug show-recovery-key" | MATCH '[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}'
+    nested_exec "sudo snap recovery --show-recovery-key" | MATCH '[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}'
     echo "But not as user (normal file permissions prevent this)"
-    ! nested_exec "snap debug show-recovery-key"
+    if nested_exec "snap recovery --show-recovery-key"; then
+        echo "snap recovery --show-recovery-key should not work as a user"
+        exit 1
+    fi
