--- a/tests/main/snapshot-basic/task.yaml
+++ b/tests/main/snapshot-basic/task.yaml
@@ -135,6 +135,6 @@ execute: |
     mv "$SNAPSHOT_FILE" "$NEWSNAPSHOT_FILE"
     snap saved | MATCH "123 +test-snapd-sh"
     # make sure there is just one such snapshot
-    [[ $(snap saved | grep test-snapd-sh | wc -l) == "1" ]]
+    [[ $(snap saved | grep -c test-snapd-sh) == "1" ]]
     snap saved --id=123 | MATCH "123 .+test-snapd-sh"
     snap restore 123 test-snapd-sh
