--- a/tests/core/enable-disable-units-gpio/task.yaml
+++ b/tests/core/enable-disable-units-gpio/task.yaml
@@ -27,9 +27,7 @@ prepare: |
     systemd_create_and_start_persistent_unit fake-gpio "$TESTSLIB/fakegpio/fake-gpio.py" "[Unit]\\nBefore=snap.core.interface.gpio-100.service\\n[Service]\\nType=notify"
 
     echo "Given a snap declaring a plug on gpio is installed"
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-    install_local gpio-consumer
+    "$TESTSTOOLS"/snaps-state install-local gpio-consumer
 
     echo "And the gpio plug is connected"
     snap connect gpio-consumer:gpio :gpio-pin
