--- a/tests/regression/lp-1618683/task.yaml
+++ b/tests/regression/lp-1618683/task.yaml
@@ -8,9 +8,7 @@ details: |
 
 prepare: |
     echo "Having installed a test snap in devmode"
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB/snaps.sh"
-    install_local_devmode test-snapd-tools
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-tools --devmode
 
     if [[ "$SPREAD_SYSTEM" == centos-* ]]; then
         # RHEL/Centos 7.4+ set this to 0 by default
