--- a/tests/regression/lp-1802581/task.yaml
+++ b/tests/regression/lp-1802581/task.yaml
@@ -62,9 +62,7 @@ execute: |
     fi
 
     echo "Install a snap that uses the gpio consumer"
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
-    install_local gpio-consumer
+    "$TESTSTOOLS"/snaps-state install-local gpio-consumer
 
     echo "And connect the gpio pin"
     snap connect gpio-consumer:gpio :gpio-pin
