--- a/tests/regression/lp-1813963/task.yaml
+++ b/tests/regression/lp-1813963/task.yaml
@@ -5,8 +5,6 @@ systems: [ubuntu-16.04-64, ubuntu-18.04-64]
 backends: [-external]
 
 prepare: |
-    #shellcheck source=tests/lib/snaps.sh
-    . "$TESTSLIB"/snaps.sh
     #shellcheck source=tests/lib/dirs.sh
     . "$TESTSLIB"/dirs.sh
     # Install the versatile test snap.
@@ -21,7 +19,7 @@ prepare: |
     # without anything special about it.
     #
     # For the purpose of the test we want the service to be off.
-    install_local test-snapd-simple-service
+    "$TESTSTOOLS"/snaps-state install-local test-snapd-simple-service
     systemctl stop snap.test-snapd-simple-service.test-snapd-simple-service.service
     snapd.tool exec snap-discard-ns test-snapd-simple-service
 
